syntax = "proto3";

package proto_v3;

message Person {
  string name = 1;
  int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }
  message PhoneNumber {
    string number = 1;
    optional PhoneType type = 2;
  }
  repeated PhoneNumber phones = 4;

  oneof employment {
    bool unemployed = 5;
    string employer = 6;
    string school = 7;
    bool selfEmployed = 8;
  }
}

message AddressBook {
  repeated Person people = 1;
}
